src/project/hdmi.sdk/.metadata/.plugins/org.eclipse.cdt.ui/videodemo.build.log
18:25:27 **** Incremental Build of configuration Debug for project videodemo ****
make all 
'Building file: ../src/video_demo.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_demo.o" -I../../videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/video_demo.d" -MT"src/video_demo.o" -o "src/video_demo.o" "../src/video_demo.c"
In file included from c:\xilinx\sdk\2016.2\gnu\microblaze\nt\microblaze-xilinx-elf\include\string.h:10:0,
                 from ../../videodemo_bsp/microblaze_0/include/xaxivdma_i.h:74,
                 from ../../videodemo_bsp/microblaze_0/include/xaxivdma.h:304,
                 from ../src/video_capture/video_capture.h:75,
                 from ../src/video_demo.c:29:
c:\xilinx\sdk\2016.2\gnu\microblaze\nt\microblaze-xilinx-elf\include\stdio.h:223:9: error: conflicting types for 'print'
 void    _EXFUN(print, (const char* ));
         ^
In file included from ../../videodemo_bsp/microblaze_0/include/xil_io.h:70:0,
                 from ../../videodemo_bsp/microblaze_0/include/xaxivdma_hw.h:82,
                 from ../../videodemo_bsp/microblaze_0/include/xaxivdma.h:303,
                 from ../src/video_capture/video_capture.h:75,
                 from ../src/video_demo.c:29:
../../videodemo_bsp/microblaze_0/include/xil_printf.h:42:6: note: previous declaration of 'print' was here
 void print(char *ptr);
      ^
../src/video_demo.c: In function 'DemoRun':
../src/video_demo.c:279:4: warning: implicit declaration of function 'MB_Sleep' [-Wimplicit-function-declaration]
    MB_Sleep(50);
    ^
make: *** [src/video_demo.o] Error 1

18:25:28 Build Finished (took 829ms)

